--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet">
-  <title>Red-Lipped-Batfish</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script src="build/bundle.js"></script> 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap"
+      rel="stylesheet"
+    />
+    <title>Red-Lipped-Batfish</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="build/bundle.js"></script>
+    <ul>
+      <li>
+        <a href="/auth/login">Log in using Google</a>
+      </li>
+      <li><a href="/auth/logout">Log out of Google</a></li>
+    </ul>
+  </body>
 </html>
